# WorldPopulation

./: pyproject.toml
world-population/: README.md  package.json
world-population/public/: index.html
world-population/src/: App.tsx
world-population/src/client/: App.tsx
world-population/src/server/data/: lifeexpectancy.csv  worldpopulation.csv
