[tool.poetry]
name = "worldpopulation"
version = "0.1.0"
description = ""
authors = ["Ramsey Gavin <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b1"
boto3 = "^1.20.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
